<resources>

    <string name="default_web_client_id" translatable="false">951846967116-5acr5vl31rfadiqf9smv4fica455m53p.apps.googleusercontent.com</string>
    <string name="app_name">ProyectoLZCTRANSPORTA</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmarContraseña">Confirmar Contraseña</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="registrarme">Registrarme</string>
    <string name="olvideContraseña">Olvide mi contraseña</string>
    <string name="aceptarTerminos">He leido y acepto los</string>
    <string name="terminos">términos y condiciones de uso</string>
    <string name="google">Google</string>
    <string name="facebook">FaceBook</string>
    <string name="title_activity_registrarme">ActivityRegistrarme</string>
    <string name="title_activity_olvide_contraseña">ActivityOlvideContraseña</string>
    <string name="title_activity_terminos">TerminosActivity</string>
    <string name="nombre">Nombres</string>
    <string name="apellido">Apellidos</string>
    <string name="telefono">Número de telefono</string>
    <string name="registra">Registrar usuario</string>
    <string name="recuperar">Recuperar Contraseña</string>
    <string name="recuperarUsuario">Recuperar Usuario</string>


    <string name="tituloUbicacion">Permitir acceso a ubicacion</string>
    <string name="preguntaUbicacion">¿Desea Permitir acceso a ubicacion?</string>
    <string name="siUbi">Permitir</string>
    <string name="noUbi">Rechazar</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="buscarCombi">Buscar combi</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="solicitar">Solicitar viaje </string>
    <string name="conirmar">Confirmar viaje </string>
    <string name="desactivarServicio">Desactivar Servicio</string>
    <string name="google_maps_key">AIzaSyBfStMXeUJF8VU8y5mP2uNrDZ5koRiYBf8</string>

    <string name="more_options">Más opciones</string>


    <!-- INICIO SESION FACEBOOK -->
    <string name="facebook_app_id">381331901020710</string>
    <string name="fb_login_protocol_scheme">917aad141ac7fa616ed0e5e30452a115</string>
    <string name="facebook_client_token">lfolydG3o1M96ls2nTaXIiDQeQM=</string>





    <string name="title_activity_geo_prov">GeoProv</string>
    <string name="title_activity_trip_info">TripInfoActivity</string>


</resources>