<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/comb"
                    android:scaleType="centerCrop"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:alpha="0.7" />
            </FrameLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center">



        <View
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:background="@drawable/rounded_layout"
            android:alpha="0.3"
            />

        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_person_white"/>



            <TextView
                android:id="@+id/txtInicioCorreo"
                style="@style/viewCustom"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:text="@string/iniciarSesion"
                android:textSize="15sp"
                android:textColor="@color/white"


                />

            <EditText
            android:id="@+id/etInicioCorreo"
            style="@style/viewCustom"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
                android:drawableStart="@drawable/ic_email_white"

            />

            <EditText
            android:id="@+id/etInicioContrasena"
            style="@style/viewCustom"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:drawableStart="@drawable/ic_lock_white"

            />

            <TextView
            android:id="@+id/btnInicioSesion"
            style="@style/viewCustom"

            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textAlignment="center"
            android:text="@string/iniciar"
            android:textColor="@color/black"
            android:textStyle="bold"
                android:background="@drawable/rounded_button"

            />
            <TextView
            android:id="@+id/txtInicioRegistrarme"
            style="@style/viewCustom"
            android:gravity="center_horizontal"
            android:onClick="registrar"
            android:paddingTop="0dp"
            android:text="@string/registrarme"
            android:textColor="@color/white"
            android:textSize="12sp"
             />
            <TextView
            android:id="@+id/txtInicioOlvideContrasena"
            style="@style/viewCustom"
            android:onClick="olvideContrasena"
            android:paddingTop="0dp"
            android:gravity="center_horizontal"
            android:text="@string/olvideContraseña"
            android:textSize="12sp"
            android:textColor="@color/white"/>

            <Button
            android:id="@+id/btnInicioGoogle"
            android:onClick="goMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/google"
            android:paddingLeft="10dp"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
                android:backgroundTint="@color/white"
             />
            <Button
            android:id="@+id/btnInicioFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/facebook"
            android:paddingLeft="10dp"
            android:text="@string/facebook"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
                android:backgroundTint="@color/white"/>




        </LinearLayout>

    </FrameLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>